# helix-proto

./: .gitignore  Dockerfile  README.md  deploy_local_demo.ps1  package.json  pyproject.toml  render.yaml  run_backend.bat  vercel.json
scripts/: build-web.mjs
src/helix_proto/: __init__.py  agent.py  api.py  cli.py  format.py  hf.py  memory.py  server.py  text.py  tools.py  workspace.py
tests/: test_agent_memory.py  test_format.py  test_text_tools.py  test_workspace.py
web/: app.html  app.js  index.html  styles.css
